fix findbugs warnings